--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,14 @@ dependencies:
   image: ^4.1.4
   image_gallery_saver: ^2.0.3
   screenshot: ^2.1.0
+  google_sign_in:
+  googleapis: ^12.0.0
+  googleapis_auth: ^1.4.1
+  firebase_auth:
+  firebase_core:
+  intl:
+#  flutter_secure_storage: ^9.0.0
+#  url_launcher:
 
 
   # The following adds the Cupertino Icons font to your application.
